--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ button {
     font-weight: 600;
 }
 
-.options-div {
+.option-div {
     font-size: 0.9em;
     width: 100%;
     padding: 1em;
@@ -115,8 +115,8 @@ button {
     border-color: #d32f2f;
 }
 
-/*??*/
-.incorrect{
+
+.correct{
     background-color: #e7f6d5;
     color: #689f38;
     border-color: #689f38;
